--- a/DAC-FRONT-END/src/main.css
+++ b/DAC-FRONT-END/src/main.css
@@ -4,7 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,400;6..96,500;6..96,700&display=swap");
 
 @font-face {
-    font-family: 'Bodoni Moda Black';
+    font-family: 'Vedana';
 
 }
 
