--- a/DAC-FRONT-END/src/main.css
+++ b/DAC-FRONT-END/src/main.css
@@ -21,16 +21,19 @@ html {
 }
 @layer components {
   .input-text {
-    @apply border p-2 rounded-main w-72 focus:outline-main-blue focus:outline-1 text-xs shadow-sm;
+    @apply border p-2 rounded-main w-72 focus:outline-main-blue focus:outline-1 text-xs shadow-sm mr-1;
   }
   .button-success {
-    @apply bg-main-blue text-white px-5 py-2 border rounded-main hover:bg-main-blue-hover text-sm ease-out duration-500;
+    @apply bg-main-blue text-white px-5 py-2 border rounded-main hover:bg-main-blue-hover text-sm ease-out duration-500 mx-2;
+  }
+  .button-delete {
+    @apply bg-main-red text-white px-5 py-2 border rounded-main hover:bg-main-red-hover text-sm ease-out duration-500 shadow mx-2;
   }
   .button-cancel {
-    @apply bg-main-red text-white px-5 py-2 border rounded-main hover:bg-main-red-hover text-sm ease-out duration-500 shadow;
+    @apply bg-slate-400 text-white px-5 py-2 border rounded-main hover:bg-slate-700 text-sm ease-out duration-500 shadow mx-2;
   }
   .button-main-menu {
-    @apply bg-main-red text-white px-5 py-2 border rounded-main hover:bg-opacity-70 text-xs ease-out duration-500;
+    @apply bg-main-red text-white px-5 py-2 border rounded-main hover:bg-opacity-70 text-xs ease-out duration-500 mx-2;
   }
   .h-desktop{
     @apply fit-content
@@ -57,4 +60,8 @@ html {
   .responsive-width-component{
     @apply w-11/12 md:w-[600px] m-auto
   }
+}
+
+select:disabled {
+  background: #f5f5f5;
 }
