fixes en metodo createInvoice

--- a/API/utils/BillTemplates/bill.pug
+++ b/API/utils/BillTemplates/bill.pug
@@ -17,7 +17,7 @@ html(lang="es")
     //- section
     //-   h2 Datos del Cliente
     //-   p #{Cliente.nombre}
-    //-   p Cédula: #{Cliente.tipoIdentificacion} #{Cliente.idenficacion}
+    //-   p Cédula: #{Cliente.tipoIdentificacion} #{Cliente.identificacion}
     //-   p Email: #{Cliente.email}
     section
       h2 Detalles de la Factura
