--- a/DAC-FRONT-END/src/main.css
+++ b/DAC-FRONT-END/src/main.css
@@ -65,3 +65,25 @@ html {
 select:disabled {
   background: #f5f5f5;
 }
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 15px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--primary);
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--secondary);
+  border-radius: 14px;
+  border: 3px solid var(--primary);
+}
