--- a/DAC-FRONT-END/src/main.css
+++ b/DAC-FRONT-END/src/main.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 @import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,400;6..96,500;6..96,700&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap');
+
 @font-face {
   font-family: 'Montserrat', sans-serif;
 
@@ -41,6 +42,9 @@ html {
   .button-cancel {
     @apply border-[#202528] text-[#202528] pl-[15px] pr-[20px] py-2 border rounded-main  text-xs ease-out mx-2 flex gap-1 items-center hover:scale-110 transition-transform duration-300 ;
   }
+  .button-kitchen-back {
+    @apply border-[#FFFFFF] text-[#FFFFFF] pl-[15px] pr-[20px] py-2 border rounded-main  text-xs ease-out mx-2 flex gap-1 items-center hover:scale-110 transition-transform duration-300 ;
+  }
   .button-add {
     @apply border-main-blue text-main-blue pl-[15px] pr-[20px] py-2 border rounded-main text-xs ease-out mx-2 flex gap-1 items-center hover:scale-110 transition-transform duration-300 ;
   }
@@ -68,6 +72,9 @@ html {
   }
   .h-desktop{
     @apply fit-content
+  }
+  .box-style{
+    @apply px-10 py-5 rounded-main bg-white border shadow overflow-y-auto w-full 
   }
   .responsive-width-component{
     @apply w-11/12 md:w-[600px] m-auto
@@ -145,4 +152,29 @@ select:disabled {
   text-overflow: ellipsis;
   line-height: 1.2em; /* Ajusta esto según el tamaño de línea que desees */
   max-height: 3.6em; /* Esto debe ser line-height x 'n' líneas que quieras mostrar */
+}
+
+@media print {
+  @page {
+    box-sizing: border-box;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+  }
+  body, html {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+.h-5per{
+  height: 5%;
+}
+.h-95per{
+  height: 95%;
 }
