--- a/API/utils/BillTemplates/bill.pug
+++ b/API/utils/BillTemplates/bill.pug
@@ -58,7 +58,7 @@ html(lang="es")
               span.value #{totalPagar}
     section.center-items
       p #{Fecha}
-      p Medio de Pago: #{MedioDePago}
+      p Método de Pago: #{MedioDePago}
       p.fontXs Tiquete Electronico: #{KeyXml}
       p.fontXs Número Consecutivo: #{Consecutivo}
     footer.center-items
